--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.4.4",
     "autoprefixer": "^10.4.19",
+    "pdfjs-dist": "^4.5.136",
     "postcss": "^8.4.40",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pdf": "^9.1.0",
+    "react-router-dom": "^6.26.1",
     "tailwindcss": "^3.4.7",
     "typewriter-effect": "^2.21.0"
   },
