--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "^8.4.40",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "react-pdf": "^9.1.0",
     "react-router-dom": "^6.26.1",
     "tailwindcss": "^3.4.7",
