--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "dependencies": {
     "@react-pdf/renderer": "^3.4.4",
     "autoprefixer": "^10.4.19",
+    "bootstrap": "^5.3.3",
     "pdfjs-dist": "^4.5.136",
     "postcss": "^8.4.40",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
+    "react-icons": "^5.5.0",
     "react-pdf": "^9.1.0",
     "react-router-dom": "^6.26.1",
     "tailwindcss": "^3.4.7",
